  * Drop the 'testsuite' autopkgtest, as it does not test the installed
    packages.
  * Remove unused okular-dev.acc.in file.
  * Add the configuration for the CI on salsa.
  * Update install files.
  * Unregister okular.categories as conffile, as it is no more in /etc.
  * Pass -DBUILD_TESTING=OFF to cmake to disable the build of tests, as they
    are not run at build time anyway.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 01 Mar 2020 10:22:07 +0100

okular (4:18.04.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream release.
  * Rename libokular5core8 to libokular5core9, according to the upstream SONAME
    bump.
  * Update the build & runtime dependencies:
    - bump all the Qt ones to >= 5.8.0
    - bump all the KF5 ones to >= 5.33.0
    - add libkf5crash-dev, libkf5purpose-dev, and libqt5texttospeech5-dev
  * Switch Vcs-* fields to salsa.debian.org.
  * Bump the debhelper compatibility to 11:
    - bump the debhelper build dependency to 11~
    - bump compat to 11
  * Bump Standards-Version to 4.1.4, no changes required.
  * Since the okularcore library bumps SONAME in each stable series, instead of
    using a symbols file make sure the generated shlibs requires the last
    version.
  * Remove the jovie suggests, as it is not useful for okular.

 -- Pino Toscano <pino@debian.org>  Tue, 08 May 2018 17:58:18 +0200

okular (4:17.12.2-2) unstable; urgency=medium

  * Team upload.
  * Upload to unstable.

 -- Pino Toscano <pino@debian.org>  Thu, 22 Feb 2018 06:57:20 +0100

okular (4:17.12.2-1) experimental; urgency=medium

  * Team upload.
  * New upstream release: (Closes: #887746)
    - allows one to save changed document archives (Closes: #598806)
  * Rename libokular5core7 to libokular5core8, according to the upstream SONAME
    bump.
  * Add the libmarkdown2-dev, and libzip-dev build dependencies, optionally
    needed by the new version (for CHM and Mardown backends).
  * Update install files.